# Reversi_Console_Game

./: .gitignore  CMakeLists.txt
src/client/: makefile
src/client/include/: AIPlayer.h  Board.h  BoardLogic.h  Cell.h  CloseOtherSocketTask.h  CloseSelfSocketTask.h  ConsoleDisplay.h  Coordinate.h  Counter.h  Display.h  Game.h  GameLogic.h  JoinToGameTask.h  LocalPlayer.h  LocalVersusAIChoice.h  LocalVersusLocalChoice.h  LocalVersusRemoteChoice.h  Menu.h  MenuItem.h  Move.h  Player.h  QuitGameChoice.h  RemotePlayer.h  ScoreTracker.h  ShowAvailableGamesTask.h  StartNewRemoteGameTask.h  TwoPlayers.h  custom_strings.h
src/client/src/: AIPlayer.cpp  Board.cpp  BoardLogic.cpp  Cell.cpp  CloseOtherSocketTask.cpp  CloseSelfSocketTask.cpp  ConsoleDisplay.cpp  Coordinate.cpp  Counter.cpp  Display.cpp  Game.cpp  GameLogic.cpp  JoinToGameTask.cpp  LocalPlayer.cpp  LocalVersusAIChoice.cpp  LocalVersusLocalChoice.cpp  LocalVersusRemoteChoice.cpp  Menu.cpp  MenuItem.cpp  Move.cpp  Player.cpp  QuitGameChoice.cpp  RemotePlayer.cpp  ScoreTracker.cpp  ShowAvailableGamesTask.cpp  StartNewRemoteGameTask.cpp  TwoPlayers.cpp  client_main.cpp
src/client/tests/: ai_test.cpp  board_logic_test.cpp  board_test.cpp  gtest_main.cpp
src/server/: makefile
src/server/include/: AvailableGames.h  CloseCommand.h  Command.h  CommandManager.h  JoinCommand.h  ListGamesCommand.h  RunningGames.h  Server.h  StartCommand.h
src/server/src/: AvailableGames.cpp  CloseCommand.cpp  CommandManager.cpp  JoinCommand.cpp  ListGamesCommand.cpp  RunningGames.cpp  Server.cpp  StartCommand.cpp  server_main.cpp
